# drake

./: Dockerfile  start-docker.sh
PQ12/: CMakeLists.txt  package.xml
PQ12/config/: joint_names_PQ12_newest.yaml
PQ12/launch/: display.launch  gazebo.launch
PQ12/meshes/: Actuator.STL  Shaft.STL
PQ12/urdf/: PQ12_newest.csv  PQ12_newest.urdf
course/: BUILD.bazel  L2.cc  L3.cc
drake-CRT-master/: README.md
examples/athena/: BUILD.bazel  athena-arm.cc  athena-hand.cc  athena.cc  athena.h  run_athena_sim.cc
examples/athena/models/: box.urdf  cassie_with_athena_intermediate.urdf  environment_floor_1.sdf  environment_floor_2.sdf  multi_static_boxes.urdf  quadrotor.urdf  stairs.sdf
examples/cassie/: BUILD.bazel  cassie.cc  cassie.h  run_cassie_follow.cc
examples/cassie/models/: quadrotor_team.urdf
examples/double_pendulum_pid/: BUILD.bazel  run_double_pendulum_passive.cc
examples/hello/: BUILD.bazel  hello.cc
examples/multibody/pendulum/: passive_simulation.cc
