load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_library",
)
load("//tools/install:install_data.bzl", "install_data")

package(
    default_visibility = [":__subpackages__"],
)

drake_cc_library(
    name = "cassie",
    srcs = ["cassie.cc"],
    hdrs = [
        "cassie.h",
    ],
    data = [":models"],
    visibility = ["//visibility:public"],
    deps = [
        "//common:default_scalars",
        "//common:essential",
        "//common:find_resource",
        "//systems/framework",
        "//systems/analysis",
        "//multibody/plant",
        "//multibody/parsing",
        "//multibody/inverse_kinematics",
        "//solvers:constraint",
        "//solvers:gurobi_qp",
        "//solvers:gurobi_solver",
        "//solvers:mathematical_program",
        "//solvers:mathematical_program_result",
        "//solvers:osqp_solver",
        "//solvers:solve",
    ],
)

drake_cc_binary(
    name = "run_cassie_follow",
    srcs = ["run_cassie_follow.cc"],
    data = [
        ":models",
    ],
    deps = [
        ":cassie",
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//geometry:geometry_visualization",
        "//multibody/parsing",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/framework:diagram",
        "//systems/rendering:multibody_position_to_geometry_pose",
        "@gflags",
    ],
)

install_data()
